# AutoSort-Control-System

./: README.md  main.py  pyproject.toml  render.yaml  requirements.txt  wsgi.py
docs/: PLC_DESIGN.md
src/autosort/: __init__.py  console_view.py  controller.py  ui.py  web_app.py
tests/: test_controller.py  test_web_app.py
