[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autosort-control-system"
version = "0.1.0"
description = "PLC-style package routing simulator for an automated sortation system"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "GitHub Copilot" }
]
dependencies = [
  "flask>=3.1,<4"
]

[tool.setuptools.packages.find]
where = ["src"]
